update class project
upload and update class projects

--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@
                         <li class="list-inline-item"><i class="fa fa-file-excel"></i></li>
                     </ul>
                     <div class="subheading mb-3">Coursework</div>
-                    Multi-dimensional calculus, Differential equation, Linear algebra, Probability and stochastic, 
-                    Financial mathematics, Forecasting Analysis, Machine Learning, Econometrics, Numerical method,
-                    Advance Machine Learning, Algorithms, Cyber-security, Database (SQL).
+                    Reinforcement Learning, Advance Machine Learning, Algorithms, Computer Graphics, 
+                    Assembly Language, System Programming, Formal Specification, Database System (SQL),
+                    Forecasting Analysis, Numerical Methods, Linear Algebra, Differential Equation, 
+                    Multi-Dimensional Calculus, Econometrics, Probability Theory, Statistical Inference, 
+                    Financial Mathematics, Mathematical Optimization, cyber-security and software security analysis.
                     <p></p>
                     <p></p>
                     <div class="subheading mb-3">Communcational Language</div>
@@ -169,6 +171,21 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2019 - Spring 2020</span></div>
                     </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Data Analyst</h3>
+                            <div class="subheading mb-3">Boston Road Runner (BRR)</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sep 2019 - Dec 2019</span></div>
+                    </div>
+                    <ul>
+                        <li>Preprocessed (handle missing values, duplicates, and apply consistent formatting) data of participants and sponsors.</li>
+                        <li>Developed auto-regression time series models in R to predict future trends in the number of participants for upcoming races.</li>
+                        <li>Designed 3NF database schema using ERD and relation schema to reduce anomalies and improve data quality and integrity.</li>
+                        <li>Created data visualizations using Tableau, which allow peers and sponsors easily interpret and understand data insights.</li>
+                    </ul>
+
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Instructor & Summer Camp Resident Assistant</h3>
@@ -181,6 +198,7 @@
                         <li>Created study plans for the class and conducted group activities with students.</li>
                         <li>Structured activities and events for residential students.</li>
                     </ul>
+
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Vice President</h3>
@@ -222,25 +240,17 @@
             <!-- Research Work-->
             <section class="resume-section" id="research">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Research Work</h2>
+                    <h2 class="mb-5">Research</h2>
                     <div class="flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <!-- <h3 class="mb-0">Archival Publication</h3>
-                            <ul> 
-                                
-                            </ul>  -->
-                            <h3 class="mb-0">Non-Archival Publication</h3>
+                            <h3 class="mb-0">Publications and Preprints</h3>
                             <ul> 
                                 <li><a href="https://virtual.aistats.org/virtual/2023/poster/5483">Entropic Risk Optimization in Discounted MDPs.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, AISTATS 2023</li>
-                                <li><a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_08045e06d83f42ec8d5c2841dc362312.pdf">
-                                    Robust pest management using Reinforcement Learning.</a> Talha Siddique, <b>Jia Lin Hau</b>, Shadi Atallah, Marek Petrik, 
-                                    RLDM 2019
-                            </ul> 
-                            <h3 class="mb-0">Non-Peer Reviewed Paper (ArXiv)</h3>
-                            <ul> 
-                            <li><a href="https://arxiv.org/abs/2209.04067">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
-                                <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022</li>
+                                <li><a href="https://arxiv.org/abs/2209.04067">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
+                                    <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022</li>
+                                <li>Robust pest management using Reinforcement Learning. Talha Siddique, <b>Jia Lin Hau</b>, Shadi Atallah, Marek Petrik, 
+                                RLDM 2019
                             </ul> 
                         </div>
                     </div>
@@ -260,33 +270,56 @@
             <!-- Class Projects-->
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Projects</h2>                
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div id="cryptocurrency-title" class="flex-grow-1">
-                            <h3 class="mb-0">Cryptocurrency Analytics</h3>
-                            <a href="#cryptocurrency-title" onclick="togglePDF('cryptocurrency-report', 
-                            'https://monkiedein.github.io/CV/assets/documents/CryptocurrencyClassProject.pdf','Report')">View Report</a> 
-                            <div id="cryptocurrency-report" style="display:none;">
-                                <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
-                            </div>
-                            <div class="subheading mb-3">Jia Lin Hau, Gerasimos Mouikis, Spencer Pope</div>
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Class Project</h3>
+                        <div id="MAB-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">Multi Arm Bandits Basic Algorithms Comparison</h4> 
+                            <div class="subheading mb-4">Jia Lin Hau</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Fall 2021</span></div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Feb 2018 - May 2019</span></div>
-                    </div>
-                    Predicted cryptocurrency with time series analysis method VAR on the log return of the closing price.
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div id="BJ-title" class="flex-grow-1">
-                            <h3 class="mb-0">MDP on Blackjack</h3>
-                            <a href="#BJ-title" onclick="togglePDF('BJppt', 
-                            'https://monkiedein.github.io/CV/assets/documents/MDPslide.pdf','Slide')">View Slide</a> 
-                            <div id="BJppt" style="display:none;">
-                                <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
-                            </div>
-                            <div class="subheading mb-3">Jia Lin Hau, Marek Petrik</div>
+                        Explored Multi Arm Bandits (MAB) algorithms and their performance in adversarial domain. We obtained two conclusions from the
+                        empirical results, (1)  Even a little randomization provide difficulty for adversarial to exploit. 
+                        (2) Decrease exploration weight over-time benefit algorithms to exploit higher reward arms.
+                        <a href="#MAB-title" onclick="togglePDF('CartpoleReport', 
+                        'https://monkiedein.github.io/CV/assets/documents/MultiArmBanditComparison.pdf','Report')">View Report</a> 
+                        <div id="MABReport" style="display:none;">
+                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Jan 2018 - Jul 2019</span></div>
+                        <div id="Cartpole-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">Bayesian MDP solved Cartpole with limited data</h4> 
+                            <div class="subheading mb-4">Jia Lin Hau</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Fall 2019</span></div>
+                        </div>
+                        Applied regression model with STAN Bayesian probabilistic program to handle problem with limited data. Demonstrated it with Cartpole (OpenAI gym domain).
+                        <a href="#Cartpole-title" onclick="togglePDF('CartpoleReport', 
+                        'https://monkiedein.github.io/CV/assets/documents/BayesianMDPcartpole.pdf','Report')">View Report</a> 
+                        <div id="CartpoleReport" style="display:none;">
+                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
+                        </div>
+                        <div id="cryptocurrency-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">Cryptocurrency Analytics</h4> 
+                            <div class="subheading mb-4">Jia Lin Hau, Gerasimos Mouikis, Spencer Pope</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Spring 2018</span></div>
+                        </div>
+                        Predicted cryptocurrency with time series analysis method VAR on the log return of the closing price. 
+                        <a href="#cryptocurrency-title" onclick="togglePDF('cryptocurrency-report', 
+                        'https://monkiedein.github.io/CV/assets/documents/CryptocurrencyClassProject.pdf','Report')">View Report</a> 
+                        <div id="cryptocurrency-report" style="display:none;">
+                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
+                        </div>
+                        <div id="BJ-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">Solve Blackjack with MDPs</h4> 
+                            <div class="subheading mb-4">Jia Lin Hau, Marek Petrik</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Spring 2018</span></div>
+                        </div>
+                        Utilized MDP (Value Iteration) to solve for the optimal action (Stand, Hit, Split, Double, or Surrender) for BlackJack with R. 
+                        <a href="#BJ-title" onclick="togglePDF('BJppt', 
+                        'https://monkiedein.github.io/CV/assets/documents/MDPslide.pdf','Slide')">View Slide</a> 
+                        <div id="BJppt" style="display:none;">
+                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
+                        </div>
                     </div>
-                    Utilized MDP (Value Iteration) to solve for the optimal action (Stand, Hit, Split, Double, or Surrender) for BlackJack with R.
                 </div>
             </section>
             <!-- todo : add EMOAI and CRACC here-->
