--- a/index.html
+++ b/index.html
@@ -281,11 +281,12 @@
                         Explored Multi Arm Bandits (MAB) algorithms and their performance in adversarial domain. We obtained two conclusions from the
                         empirical results, (1)  Even a little randomization provide difficulty for adversarial to exploit. 
                         (2) Decrease exploration weight over-time benefit algorithms to exploit higher reward arms.
-                        <a href="#MAB-title" onclick="togglePDF('CartpoleReport', 
+                        <a href="#MAB-title" onclick="togglePDF('MABReport', 
                         'https://monkiedein.github.io/CV/assets/documents/MultiArmBanditComparison.pdf','Report')">View Report</a> 
                         <div id="MABReport" style="display:none;">
                             <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
                         </div>
+                        <p></p><p></p>
                         <div id="Cartpole-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">Bayesian MDP solved Cartpole with limited data</h4> 
                             <div class="subheading mb-4">Jia Lin Hau</div>
@@ -297,6 +298,7 @@
                         <div id="CartpoleReport" style="display:none;">
                             <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
                         </div>
+                        <p></p><p></p>
                         <div id="cryptocurrency-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">Cryptocurrency Analytics</h4> 
                             <div class="subheading mb-4">Jia Lin Hau, Gerasimos Mouikis, Spencer Pope</div>
@@ -308,6 +310,7 @@
                         <div id="cryptocurrency-report" style="display:none;">
                             <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
                         </div>
+                        <p></p><p></p>
                         <div id="BJ-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">Solve Blackjack with MDPs</h4> 
                             <div class="subheading mb-4">Jia Lin Hau, Marek Petrik</div>
@@ -319,6 +322,42 @@
                         <div id="BJppt" style="display:none;">
                             <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
                         </div>
+
+                        <p></p><p></p>
+                        <h3 class="mb-0">Group Project</h3>
+                        <div id="EMOAI-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">EMOAI</h4> 
+                            <p>Developer and Use Case Finder</p>
+                            <div class="subheading mb-4">Shayan Amani, Chao Chi Cheng, Jia Lin Hau, Lekyang Sai</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Spring 2019</span></div>
+                        </div>
+                        <p>Emotion recognition application to avoid depression.
+                            <a href="https://www.youtube.com/watch?v=CrPHfAZ59tE">View Presentation</a>    
+                        </p>
+                        <ul> 
+                            <li>Spearheaded Deep Learning (CNN) emotion recognition project with pre-trained models to accurately classify users' facial expressions.</li>
+                            <li>Proposed groundbreaking application of the use of facial and emotion recognition technology to identify and prevent depression.</li>
+                            <li>Implemented active learning with PyTorch, enable personalized classification by allowing users to update labels of their own emotion.</li>
+                        </ul>
+
+                        <div id="CRACC-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">CRACC</h4> 
+                            <p>Analyst / Android Developer</p>
+                            <div class="subheading mb-4">Khoi Nguyễn (Danny), Chao Chi Cheng, Nicolas Câmara, Jia Lin Hau</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Jan 2017 - Jan 2018</span></div>
+                        </div>
+                        <p>A social application that connect people to play sports together.
+                            <a href="#CRACC-title" onclick="togglePDF('CRACCppt', 
+                            'https://monkiedein.github.io/CV/assets/documents/CRACCbyDannyNguyen.pdf','Apps Images')">View Apps Images</a> 
+                            <div id="CRACCppt" style="display:none;">
+                                <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
+                            </div>
+                        </p>
+                        <ul> 
+                            <li>Collected data from various sources (API, Kaggle, BLS), analyzed and created data visualizations with Python.</li>
+                            <li>Communicated effectively with the IOS team to ensure consistent UI (XML) and functionality (Java) using Android Studio.</li>
+                            <li>Integrated with Firebase for users' data, and developed features that query weathers and navigation data based on users' location.</li>
+                        </ul>
                     </div>
                 </div>
             </section>
