swap class and group project
swap class and group project

--- a/index.html
+++ b/index.html
@@ -271,59 +271,8 @@
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
+                    
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Class Project</h3>
-                        <div id="MAB-title" class="d-flex flex-column flex-md-row justify-content-between">
-                            <h4 class="mb-0">Multi Arm Bandits Basic Algorithms Comparison</h4> 
-                            <div class="subheading mb-4">Jia Lin Hau</div>
-                            <div class="flex-shrink-0"><span class="text-primary">Fall 2021</span></div>
-                        </div>
-                        Explored Multi Arm Bandits (MAB) algorithms and their performance in adversarial domain. We obtained two conclusions from the
-                        empirical results, (1)  Even a little randomization provide difficulty for adversarial to exploit. 
-                        (2) Decrease exploration weight over-time benefit algorithms to exploit higher reward arms.
-                        <a href="#MAB-title" onclick="togglePDF('MABReport', 
-                        'https://monkiedein.github.io/CV/assets/documents/MultiArmBanditComparison.pdf','Report')">View Report</a> 
-                        <div id="MABReport" style="display:none;">
-                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
-                        </div>
-                        <p></p><p></p>
-                        <div id="Cartpole-title" class="d-flex flex-column flex-md-row justify-content-between">
-                            <h4 class="mb-0">Bayesian MDP solved Cartpole with limited data</h4> 
-                            <div class="subheading mb-4">Jia Lin Hau</div>
-                            <div class="flex-shrink-0"><span class="text-primary">Fall 2019</span></div>
-                        </div>
-                        Applied regression model with STAN Bayesian probabilistic program to handle problem with limited data. Demonstrated it with Cartpole (OpenAI gym domain).
-                        <a href="#Cartpole-title" onclick="togglePDF('CartpoleReport', 
-                        'https://monkiedein.github.io/CV/assets/documents/BayesianMDPcartpole.pdf','Report')">View Report</a> 
-                        <div id="CartpoleReport" style="display:none;">
-                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
-                        </div>
-                        <p></p><p></p>
-                        <div id="cryptocurrency-title" class="d-flex flex-column flex-md-row justify-content-between">
-                            <h4 class="mb-0">Cryptocurrency Analytics</h4> 
-                            <div class="subheading mb-4">Jia Lin Hau, Gerasimos Mouikis, Spencer Pope</div>
-                            <div class="flex-shrink-0"><span class="text-primary">Spring 2018</span></div>
-                        </div>
-                        Predicted cryptocurrency with time series analysis method VAR on the log return of the closing price. 
-                        <a href="#cryptocurrency-title" onclick="togglePDF('cryptocurrency-report', 
-                        'https://monkiedein.github.io/CV/assets/documents/CryptocurrencyClassProject.pdf','Report')">View Report</a> 
-                        <div id="cryptocurrency-report" style="display:none;">
-                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
-                        </div>
-                        <p></p><p></p>
-                        <div id="BJ-title" class="d-flex flex-column flex-md-row justify-content-between">
-                            <h4 class="mb-0">Solve Blackjack with MDPs</h4> 
-                            <div class="subheading mb-4">Jia Lin Hau, Marek Petrik</div>
-                            <div class="flex-shrink-0"><span class="text-primary">Spring 2018</span></div>
-                        </div>
-                        Utilized MDP (Value Iteration) to solve for the optimal action (Stand, Hit, Split, Double, or Surrender) for BlackJack with R. 
-                        <a href="#BJ-title" onclick="togglePDF('BJppt', 
-                        'https://monkiedein.github.io/CV/assets/documents/MDPslide.pdf','Slide')">View Slide</a> 
-                        <div id="BJppt" style="display:none;">
-                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
-                        </div>
-
-                        <p></p><p></p>
                         <h3 class="mb-0">Group Project</h3>
                         <div id="EMOAI-title" class="d-flex flex-column flex-md-row justify-content-between">
                             <h4 class="mb-0">EMOAI</h4> 
@@ -346,18 +295,69 @@
                             <div class="subheading mb-4">Khoi Nguyễn (Danny), Chao Chi Cheng, Nicolas Câmara, Jia Lin Hau</div>
                             <div class="flex-shrink-0"><span class="text-primary">Jan 2017 - Jan 2018</span></div>
                         </div>
-                        <p>A social application that connect people to play sports together.
-                            <a href="#CRACC-title" onclick="togglePDF('CRACCppt', 
-                            'https://monkiedein.github.io/CV/assets/documents/CRACCbyDannyNguyen.pdf','Apps Images')">View Apps Images</a> 
-                            <div id="CRACCppt" style="display:none;">
-                                <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="400px">
-                            </div>
-                        </p>
+                        A social application that connect people to play sports together.
+                        <a href="#CRACC-title" onclick="togglePDF('CRACCppt', 
+                        'https://monkiedein.github.io/CV/assets/documents/CRACCbyDannyNguyen.pdf','Apps')">View Apps</a> 
+                        <div id="CRACCppt" style="display:none;">
+                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                        </div>
                         <ul> 
                             <li>Collected data from various sources (API, Kaggle, BLS), analyzed and created data visualizations with Python.</li>
                             <li>Communicated effectively with the IOS team to ensure consistent UI (XML) and functionality (Java) using Android Studio.</li>
                             <li>Integrated with Firebase for users' data, and developed features that query weathers and navigation data based on users' location.</li>
                         </ul>
+                    </div>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Class Project</h3>
+                        <div id="MAB-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">Multi Arm Bandits Basic Algorithms Comparison</h4> 
+                            <div class="subheading mb-4">Jia Lin Hau</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Fall 2021</span></div>
+                        </div>
+                        Explored Multi Arm Bandits (MAB) algorithms and their performance in adversarial domain. We obtained two conclusions from the
+                        empirical results, (1)  Even a little randomization provide difficulty for adversarial to exploit. 
+                        (2) Decrease exploration weight over-time benefit algorithms to exploit higher reward arms.
+                        <a href="#MAB-title" onclick="togglePDF('MABReport', 
+                        'https://monkiedein.github.io/CV/assets/documents/MultiArmBanditComparison.pdf','Report')">View Report</a> 
+                        <div id="MABReport" style="display:none;">
+                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                        </div>
+                        <p></p><p></p>
+                        <div id="Cartpole-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">Bayesian MDP solved Cartpole with limited data</h4> 
+                            <div class="subheading mb-4">Jia Lin Hau</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Fall 2019</span></div>
+                        </div>
+                        Applied regression model with STAN Bayesian probabilistic program to handle problem with limited data. Demonstrated it with Cartpole (OpenAI gym domain).
+                        <a href="#Cartpole-title" onclick="togglePDF('CartpoleReport', 
+                        'https://monkiedein.github.io/CV/assets/documents/BayesianMDPcartpole.pdf','Report')">View Report</a> 
+                        <div id="CartpoleReport" style="display:none;">
+                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                        </div>
+                        <p></p><p></p>
+                        <div id="cryptocurrency-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">Cryptocurrency Analytics</h4> 
+                            <div class="subheading mb-4">Jia Lin Hau, Gerasimos Mouikis, Spencer Pope</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Spring 2018</span></div>
+                        </div>
+                        Predicted cryptocurrency with time series analysis method VAR on the log return of the closing price. 
+                        <a href="#cryptocurrency-title" onclick="togglePDF('cryptocurrency-report', 
+                        'https://monkiedein.github.io/CV/assets/documents/CryptocurrencyClassProject.pdf','Report')">View Report</a> 
+                        <div id="cryptocurrency-report" style="display:none;">
+                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                        </div>
+                        <p></p><p></p>
+                        <div id="BJ-title" class="d-flex flex-column flex-md-row justify-content-between">
+                            <h4 class="mb-0">Solve Blackjack with MDPs</h4> 
+                            <div class="subheading mb-4">Jia Lin Hau, Marek Petrik</div>
+                            <div class="flex-shrink-0"><span class="text-primary">Spring 2018</span></div>
+                        </div>
+                        Utilized MDP (Value Iteration) to solve for the optimal action (Stand, Hit, Split, Double, or Surrender) for BlackJack with R. 
+                        <a href="#BJ-title" onclick="togglePDF('BJppt', 
+                        'https://monkiedein.github.io/CV/assets/documents/MDPslide.pdf','Slide')">View Slide</a> 
+                        <div id="BJppt" style="display:none;">
+                            <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                        </div>
                     </div>
                 </div>
             </section>
