--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         I am highly interested in Reinforcement Learning, Actuarial Science, Deep Learning, A.I, Machine Learning and Risk Analysis. 
                         Beside learning and coding, I enjoy traveling, scuba diving, playing computer games, and basketball.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/jia-lin-hau-b61730129/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/jialin-hau/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/MonkieDein"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://gitlab.com/MonkieDein"><i class="fab fa-gitlab"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/MonkieHau/"><i class="fab fa-facebook-f"></i></a>
