--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <p class="lead mb-5">
                         I am currently a Ph.D candidate in <a href="http://cs.unh.edu">Computer Science at University of New Hampshire</a> (UNH), 
-                        a member of the <a href="http://rl2.cs.unh.edu/">Reinforcement Learning and Robustness Lab</a> (RLsquared) and my advisor is : <a href="https://marek.petrik.us/">Marek Petrik</a>.
+                        a member of the <a href="http://rl2.cs.unh.edu/">Reinforcement Learning and Robustness Lab</a> (RLsquared) and my advisor is <a href="https://marek.petrik.us/">Marek Petrik</a>.
                         My research mainly focus on computational efficient algorithm for risk averse data driven decision making. 
                     <p class="lead mb-5">    
                         I am highly interested in Reinforcement Learning, Actuarial Science, Deep Learning, A.I, Machine Learning and Risk Analysis. 
