--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <ul> 
                             <li>Spearheaded Deep Learning (CNN) emotion recognition project with pre-trained models to accurately classify users' facial expressions.</li>
                             <li>Proposed groundbreaking application of the use of facial and emotion recognition technology to identify and prevent depression.</li>
-                            <li>Implemented active learning with PyTorch, enable personalized classification by allowing users to update labels of their own emotion.</li>
+                            <li>Implemented active learning by allowing users to verify/update labels of their own emotion which enable personalized classification.</li>
                         </ul>
 
                         <div id="CRACC-title" class="d-flex flex-column flex-md-row justify-content-between">
