--- a/index.html
+++ b/index.html
@@ -243,14 +243,21 @@
                     <h2 class="mb-5">Research</h2>
                     <div class="flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Publications and Preprints</h3>
+                            <h3 class="mb-0" id="publication">Publications and Preprints </h3>
                             <ul> 
-                                <li><a href="https://virtual.aistats.org/virtual/2023/poster/5483">Entropic Risk Optimization in Discounted MDPs.</a>
+                                <li>
+                                    <a href="#publication" onclick="openURL('https://virtual.aistats.org/virtual/2023/poster/5483')">Entropic Risk Optimization in Discounted MDPs.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, AISTATS 2023</li>
-                                <li><a href="https://arxiv.org/abs/2209.04067">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
+                                <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2209.04067')">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022</li>
-                                <li>Robust pest management using Reinforcement Learning. Talha Siddique, <b>Jia Lin Hau</b>, Shadi Atallah, Marek Petrik, 
-                                RLDM 2019
+                                <li>Robust pest management using Reinforcement Learning. Talha Siddique, <b>Jia Lin Hau</b>, Shadi Atallah, Marek Petrik,RLDM 2019.
+                                    <a href="#publication" onclick="togglePDF('PestManagementReport', 
+                                    'https://monkiedein.github.io/CV/assets/documents/RobustPestManagement-poster.pdf','Poster')">View Poster</a> 
+                                    <div id="PestManagementReport" style="display:none;">
+                                        <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                                    </div>
+                                    <p>Extension project -> Other demonstration: <a href="#Cartpole-title">Bayesian MDP solved Cartpole with limited data</a> </p>
+                                    
                             </ul> 
                         </div>
                     </div>
@@ -281,7 +288,7 @@
                             <div class="flex-shrink-0"><span class="text-primary">Spring 2019</span></div>
                         </div>
                         <p>Emotion recognition application to avoid depression.
-                            <a href="https://www.youtube.com/watch?v=CrPHfAZ59tE">View Presentation</a>    
+                            <a href="#EMOAI-title" onclick="openURL('https://www.youtube.com/watch?v=CrPHfAZ59tE')">View Presentation (YouTube)</a>
                         </p>
                         <ul> 
                             <li>Spearheaded Deep Learning (CNN) emotion recognition project with pre-trained models to accurately classify users' facial expressions.</li>
@@ -340,7 +347,7 @@
                             <div class="subheading mb-4">Jia Lin Hau, Gerasimos Mouikis, Spencer Pope</div>
                             <div class="flex-shrink-0"><span class="text-primary">Spring 2018</span></div>
                         </div>
-                        Predicted cryptocurrency with time series analysis method VAR on the log return of the closing price. 
+                        Predicted cryptocurrency with time series analysis method Vector Auto Regression (VAR) on the log return of the closing price. 
                         <a href="#cryptocurrency-title" onclick="togglePDF('cryptocurrency-report', 
                         'https://monkiedein.github.io/CV/assets/documents/CryptocurrencyClassProject.pdf','Report')">View Report</a> 
                         <div id="cryptocurrency-report" style="display:none;">
