--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <p class="lead mb-5">
                         I am currently a Ph.D candidate in <a href="http://cs.unh.edu">Computer Science at University of New Hampshire</a> (UNH), 
-                        a member of the <a href="http://rl2.cs.unh.edu/">Reinforcement Learning and Robustness Lab</a> (RLsquared) and my advisor is <a href="https://marek.petrik.us/">Marek Petrik</a>.
+                        a member of the Reinforcement Learning and Robustness Lab (RLsquared) and my advisor is <a href="https://marek.petrik.us/">Marek Petrik</a>.
                         My research mainly focus on computational efficient algorithm for risk averse data driven decision making. 
                     <p class="lead mb-5">    
                         I am highly interested in Reinforcement Learning, Actuarial Science, Deep Learning, A.I, Machine Learning and Risk Analysis. 
@@ -81,16 +81,28 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of New Hampshire</h3>
-                            <div class="subheading mb-3"><a href="https://monkiedein.github.io/CV/assets/documents/CeDiD 23ZJ-41VZ-JGUS Ji.pdf">M.S. in Computer Science</a></div>
+                            <h3 id="MS-title" class="mb-0">University of New Hampshire</h3>
+                            <div class="subheading mb-3">M.S. in Computer Science. 
+                                <a href="#MS-title" onclick="togglePDF('MSdiploma', 
+                                'https://monkiedein.github.io/CV/assets/documents/CeDiD 23ZJ-41VZ-JGUS Ji.pdf','Diploma')">View Diploma</a> 
+                                <div id="MSdiploma" style="display:none;">
+                                    <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                                </div>
+                            </div>
                             <p>GPA: 4.0/4.0</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jan 2019 - Dec 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of New Hampshire</h3>
-                            <div class="subheading mb-3"><a href="https://monkiedein.github.io/CV/assets/documents/CeDiD 189A-B83B-J9U5 Ji.pdf">B.S. in Applied Mathematics: Economics</a></div>
+                            <h3 id="BS-title" class="mb-0">University of New Hampshire</h3>
+                            <div class="subheading mb-3"> B.S. in Applied Mathematics: Economics.
+                                <a href="#BS-title" onclick="togglePDF('BSdiploma', 
+                                'https://monkiedein.github.io/CV/assets/documents/CeDiD 189A-B83B-J9U5 Ji.pdf','Diploma')">View Diploma</a> 
+                                <div id="BSdiploma" style="display:none;">
+                                    <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                                </div>
+                            </div>
                             <div>Summa Cum Laude (Dean's list)</div>
                             <p>GPA: 3.89/4.0</p>
                         </div>
@@ -145,7 +157,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Assistant</h3>
-                            <div class="subheading mb-3"><a href="http://rl2.cs.unh.edu/">Reinforcement Learning and Robustness Lab</a></div> 
+                            <div class="subheading mb-3">Reinforcement Learning and Robustness Lab</div> 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fall 2020 - Present</span></div>
                     </div>
