--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             <h3 class="mb-0" id="publication">Publications and Preprints </h3>
                             <ul> 
                                 <li>
-                                    <a href="#publication" onclick="openURL('https://virtual.aistats.org/virtual/2023/poster/5483')">Entropic Risk Optimization in Discounted MDPs.</a>
+                                    <a href="#publication" onclick="openURL('https://proceedings.mlr.press/v206/lin-hau23a/lin-hau23a.pdf')">Entropic Risk Optimization in Discounted MDPs.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, AISTATS 2023</li>
                                 <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2209.04067')">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022</li>
