add Entropic poster

--- a/index.html
+++ b/index.html
@@ -259,7 +259,12 @@
                             <ul> 
                                 <li>
                                     <a href="#publication" onclick="openURL('https://proceedings.mlr.press/v206/lin-hau23a/lin-hau23a.pdf')">Entropic Risk Optimization in Discounted MDPs.</a>
-                                    <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, AISTATS 2023</li>
+                                    <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, AISTATS 2023</li> 
+                                    <a href="#publication" onclick="togglePDF('EntropicMDPposter', 
+                                    'https://monkiedein.github.io/CV/assets/documents/Entropic Risk MDP poster.pdf','Poster')">View Poster</a> 
+                                    <div id="EntropicMDPposter" style="display:none;">
+                                        <embed id="pdf-viewer" src="" type="application/pdf" width="100%" height="600px">
+                                    </div>
                                 <li><a href="#publication" onclick="openURL('https://arxiv.org/abs/2209.04067')">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022</li>
                                 <li>Robust pest management using Reinforcement Learning. Talha Siddique, <b>Jia Lin Hau</b>, Shadi Atallah, Marek Petrik,RLDM 2019.
